--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -40,6 +40,9 @@
                                 </div>
                                 <div class="bottom-area">
                                     <div class="left-side">
+                                        <button type="button" class="reg w-100 cmn-btn" data-bs-toggle="modal" data-bs-target="#displayInf">
+                                                Withdraw Money
+                                        </button>
                                         <a href="" class="cmn-btn" data-bs-toggle="modal" data-bs-target="#displayInf">Transfer Money</a>
                                         <a href="" class="cmn-btn" data-bs-toggle="modal" data-bs-target="#displayInf">Withdraw Money</a>
                                         {% comment %} <a href="withdraw-money-step-1.html" class="cmn-btn">Withdraw</a> {% endcomment %}
