--- a/templates/account/dashboard.html
+++ b/templates/account/dashboard.html
@@ -40,7 +40,7 @@
                                 </div>
                                 <div class="bottom-area">
                                     <div class="left-side">
-                                        <button type="button" class="reg w-100 cmn-btn" data-bs-toggle="modal" data-bs-target="#displayInf">
+                                        <button type="button" class="cmn-btn" onclick="alert('Sorry Cant Withdraw\nYou Need a PIN To Proceed')">
                                                 Withdraw Money
                                         </button>
                                         <a href="" class="cmn-btn" data-bs-toggle="modal" data-bs-target="#displayInf">Transfer Money</a>
